--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <br><br><br><br>
                 <div class="col-lg-7">
-                        <h2 class="white">Words Used</h2>
+                        <h2 class="white">Wrong Letters</h2>
                         <div id="wrongGuess" class="white1"> </div>
                 </div>
                 <!-- <div class="col-lg-7">
